--- a/index.html
+++ b/index.html
@@ -3,15 +3,40 @@
 <head>
   <title>web1-Welcome</title>
   <meta charset="utf-8">
+  <style>
+    a {
+      color:black;
+      text-decoration: none;
+    }
+    #active {
+      color:red;
+    }
+    .saw {
+      color:gray;
+    }
+    h1{
+      font-size:45px;
+      text-align:center;
+    }
+  </style>
 </head>
 
 <body>
-  <h1><a href="index.html">WEB</a></h1>
+<h1><a href="index.html">WEB</font></a></h1>
 <ol>
-  <li><a href="1.html">HTML</a></li>
-  <li><a href="2.html">CSS</a></li>
-  <li><a href="3.html">JavaScript</a></li>
+  <li><a href="1.html"class="saw">HTML</font></a></li>
+  <li><a href="2.html"class="saw" id="active">CSS</font></a></li>
+  <li><a href="3.html">JavaScript</font></a></li>
 </ol>
+
+<!--
+<h1><a href="index.html"><font color="red">WEB</font></a></h1>
+<ol>
+  <li><a href="1.html"><font color="red">HTML</font></a></li>
+  <li><a href="2.html"><font color="red">CSS</font></a></li>
+  <li><a href="3.html"><font color="red">JavaScript</font></a></li>
+</ol>
+-->
 
 <h2>WEB</h2>
 <img src="coding.jpg" width="50%">
@@ -39,6 +64,7 @@ s.setAttribute('data-timestamp', +new Date());
 })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
 </p>
 </body>
 </html>
